syntax = "proto3";

package bladedb;

service BladeDB {
    rpc Get (GetRequest) returns (GetResponse) {
    }
    rpc Set (SetRequest) returns (SetResponse) {
    }
    rpc Del (DelRequest) returns (DelResponse) {
    }
}

message DelRequest {
    string key = 1;
}

message DelResponse {
    bytes value = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    bytes value = 2;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
    bool status = 1;
}
